Moved Stdio modules to core package.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,7 @@
 * Make fble-stdio.c a library function instead of executable.
+ - Move fble-stdio.c to core/Core/stdio.fble.{h,c}, etc.
+ - Update build.ninja.tcl to put stdio specific tests closer to core package
+   build.
 
 * Clean up option parsing for the rest of the executables.
  - Get rid of FbleMain?
