Start using pkg-config to manage library flags in build.
I'm not sure if this is a good idea or not. It seems to add a few second
overhead to running build.ninja.tcl. Let's give it a shot for now and
see.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,9 @@
+* Switch to new proposed approach for spec tests.
+
 * Get rid of FbleMain.
    fble-md5, fble-test, fble-mem-test, fble-profiles-test
 
-* Make a separate fble-core-tests for /Core/Tests%
+* Make a separate fble-core-tests for /Core/Tests%?
   Instead of doing it as part of an overall /Fble/Tests%.
 
 * Add an app package specific test case.
