--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 * Figure out what to do with misc/Fble modules.
  - Split up Tests and Bench into corresponding modules.
  - Move what remains to fble/test non-package library.
+
+* Factor out common logic for doing fble /Foo/Tests% based tests in build.ninja.tcl
   
 * Fix dependency issue of build.ninja on moved *.fble files
   For example, moving Md5.fble to Md5/Md5.fble didn't trigger rebuild of
