Move non-test tools to fble/bin directory.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,9 @@
-* Split up Tests and Bench into corresponding modules.
 * Change fble-disassemble test to be done per spec test.
   Otherwise coverage is pretty suspect.
 
-* Figure out what to do with misc/Fble modules.
- - Move what remains to fble/test non-package library.
+* Remove core package dependency from /Fble/DebugTest%?
+
+* Move what remains to fble/test non-package library.
 
 * Factor out common logic for doing fble /Foo/Tests% based tests in build.ninja.tcl
   
@@ -15,9 +15,6 @@
    fble-test, fble-mem-test, fble-profiles-test
 
 * Switch to new proposed approach for spec tests.
-
-* Make a separate fble-core-tests for /Core/Tests%?
-  Instead of doing it as part of an overall /Fble/Tests%.
 
 * Add an app package specific test case.
   Maybe a simple demo app?
