--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,8 @@
+* Get rid of FbleMain.
+   fble-test, fble-mem-test
 * Remove core package dependency from /Fble/DebugTest%?
+* Should we add option for fble-compile to generate main function for
+  interpreted case? Might be nice?
 
 * Move what remains to fble/test non-package library.
 
@@ -8,8 +12,6 @@
   For example, moving Md5.fble to Md5/Md5.fble didn't trigger rebuild of
   build.ninja file.
 * Fix possibly missing dependency of apps on libfble-foo.a files?
-* Get rid of FbleMain.
-   fble-test, fble-mem-test, fble-profiles-test
 
 * Switch to new proposed approach for spec tests.
 
