--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,3 @@
-* Get rid of FbleMain.
-   fble-test, fble-mem-test
 * Remove core package dependency from /Fble/DebugTest%?
 * Should we add option for fble-compile to generate main function for
   interpreted case? Might be nice?
@@ -165,7 +163,7 @@ unique?
  - Check we are passing meaningful block ids to FbleNewInputPortValue and
    FbleNewOutputPortValue in all cases.
 
-* Add option for passing .so files to FbleMain.
+* Add option for passing .so files to FbleLinkFromCompiledOrSource?
 * Consider reorganizing 'langs' directory?
  - Separate tests from specification?
 
