--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
+* Switch to new proposed approach for spec tests.
+  See thoughts/fble.spectests.txt.
+
 * Should we add option for fble-compile to generate main function for
   interpreted case? Might be nice?
 
@@ -9,8 +12,6 @@
   For example, moving Md5.fble to Md5/Md5.fble didn't trigger rebuild of
   build.ninja file.
 * Fix possibly missing dependency of apps on libfble-foo.a files?
-
-* Switch to new proposed approach for spec tests.
 
 * Add an app package specific test case.
   Maybe a simple demo app?
