Start work on typecheck support for poly inference.
* The logic to call FbleTypeInfer is in place in typecheck.
* Factored out common code for type checking poly apply.
* Still need logic for doing poly + func apply in typecheck.
* Still need to implement FbleTypeInfer function.
* Poly inference tests are currently failing.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
+* Implement poly inference
+ - Finish implementation in typecheck.c
+ - Implement FbleTypeInfer in type.c
+
 * Move TODO entries to corresponding subdirectories?
 
 * Nicer error message for parsing module names with '-' in them.
