Take advantage of poly inference in Sat.fble.
To get a feel for how it works.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 * Make it easier to run failing tests under valgrind and gdb.
 * Better error message for 7.4-PolyInfer/Type/InconsistentAssignment case.
 * Add more tests for poly inference to get code coverage.
+* Clarify in spec that poly inference works for function bind
+ - And add a test case for this.
 
 * Move TODO entries to corresponding subdirectories?
 
