Switch to monadic approach for sat parser.
Mainly just to see if I can.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 * Make it easier to run failing tests under valgrind and gdb.
 * Better error message for 7.4-PolyInfer/Type/InconsistentAssignment case.
 * Add more tests for poly inference to get code coverage.
+* Add type inference for struct and union value?
+   e.g. Maybe@(just: True) instead of Maybe@<Bool@>(just: True)?
 
 * Move TODO entries to corresponding subdirectories?
 
