Clean up new /Core/Stdio% interface.
Also, fix bug in type equality of poly apply types. It turns out it is
possible to have normalized poly apply types that we might want to
compare. Add tests and support for that case.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+* Fix vim syntax highlighting for <<@>@ M@>
+  The leading '<' shouldn't be colored, because it's not part of the kind.
 * Add mouse button support to App.
 * Clean up frame rate/event handling of /App/Demo%.
 * Figure out how to support images in Apps.
