Rewrite Md5 to avoid use of processes.
Use abstract monads instead, that can be implemented purely if desired.

TODO: Update the fble-md5 code to use the new md5 interface.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+* Fix fble-md5.
+
 * Should we do type inference on List[Str|a, Str|b]? Why can't it figure that
   out?
 * Fix vim syntax highlighting for <<@>@ M@>
