--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 * Define State monad
-  - Use it in Md5 Bench, Md5 Test, and Stdio/Pure implementations.
+  - Use it in Md5 Bench, Md5 Test
 * Define IO monad.
   - As a state monad for an abstract World@ type.
 * Fix fble-md5 to use IO monad.
