Update tests to use abstract Stdio instead of IO.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,8 @@
-* Fix fble-stdio to use IO monad.
+* Remove processes from language
+ - Fix fble-stdio to use IO monad.
+ - Remove /Core/IO/* modules.
 
+* Why does /Core/Test% export String@? Is that needed?
 * Should we do type inference on List[Str|a, Str|b]? Why can't it figure that
   out?
 * Fix vim syntax highlighting for <<@>@ M@>
