--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 * Remove processes from language
+ - Remove use of processes in fble-app.c.
  - Remove /Core/IO/* modules.
 
+* Add tests that at least the compiled apps don't crash when you run them.
 * Why does /Core/Test% export String@? Is that needed?
 * Should we do type inference on List[Str|a, Str|b]? Why can't it figure that
   out?
