--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,9 @@
 * Remove processes from language
- - Remove FbleIsProcValue API.
- - Remove FbleNewOutputPortValue and FbleNewInputPortValue APIs.
- - Remove FbleNewLinkValue API.
  - Remove processes from implementation and clean up.
- - Remove TODOs related to processes.
  - Remove FORK, LINK, JOIN, EXEC, and other proc related instructions.
  - Remove unused process code as guided by code coverage.
  - Remove multithreading logic from profiling code.
+ - Remove a bunch of stuff: FbleNewLinkValue
 
 * Clean up FbleNewSimpleFunc API and use cases
  - Don't require use of global variables to pass state.
