--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,9 @@
 * Clean up FbleNewSimpleFunc API and use cases
  - Don't require use of global variables to pass state.
 
+* Make it so debug test doesn't time out. 
+ - By forcing it to run as the only thing during build?
+
 * Add tests that at least the compiled apps don't crash when you run them.
 * Why does /Core/Test% export String@? Is that needed?
 * Should we do type inference on List[Str|a, Str|b]? Why can't it figure that
