Thoughts on type inference.
And archive some discussions that are now closed.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
+* Revise language spec for type inference 
+ - see thoughts/fble.type_inference.txt for the details of the update.
+ - Update tests and implementation as needed to satisfy the spec.
+
 * Clean up FbleNewSimpleFunc API and use cases
  - Don't require use of global variables to pass state.
 
