--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,7 @@
  - Add xfail support to spec tests.
  - Figure out how to save output and print output and have exit code in ninja
    build? Use for summary.tr.
+ - Fix problem where flaky debug test failure doesn't get rerun.
 
 * Make it easier to run failing tests under valgrind and gdb.
 
@@ -12,9 +13,6 @@
 * Is <%,%>% a legal kind? What would you use it for?
   No. This should not be allowed. Double check the spec and implementation on
   this. We should use <@ X@>(X@ x) { ... } instead of <% x> { ... }.
-
-* Nicer error message for parsing module names with '-' in them.
-  Which technically isn't allowed.
 
 * Do something with .@ module value vs. type?
   - There's currently unexercised code for it.
